# 3dmm

./: .gitignore  3DMM.sln  3DMM.vcxproj  3DMM.vcxproj.filters  CMakeLists.txt  Camera.h  CheckeredPlane.cpp  CoordinateAxes.cpp  Cube.cpp  GUI.cpp  GUI.h  IDGenerator.cpp  InputHandler.cpp  InputHandler.h  Object3D.cpp  ObjectFactory.cpp  Pyramid.cpp  README.md  ShaderManager.cpp  WindowManager.cpp  WindowManager.h  imgui.ini  main.cpp  vcpkg.json
src/cpp/: Camera.cpp  GUI.cpp  Renderer.cpp  Sphere.cpp
src/h/: GraphicsObjects.h  IDGenerator.h  Initializer.h  Renderer.h  ShaderManager.h
x64/Debug/: 3DMM.exe.recipe  3DMM.vcxproj.FileListAbsolute.txt  gui.obj.enc  vc143.idb
x64/Debug/3DMM.tlog/: 3DMM.lastbuildstate  3DMM.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: 3DMM.exe.recipe  3DMM.iobj  3DMM.ipdb  3DMM.vcxproj.FileListAbsolute.txt
x64/Release/3DMM.tlog/: 3DMM.lastbuildstate  3DMM.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
